# openamp-system-reference

./: .readthedocs-conf.py  .readthedocs.yaml  CMakeLists.txt  LICENSE.md  README.md  west-virtio-exp.yml  west.yml
examples/legacy_apps/: CMakeLists.txt  README.md  west.yml
examples/legacy_apps/cmake/: depends.cmake  options.cmake  vitis.cmake
examples/legacy_apps/cmake/modules/: Findopen_amp.cmake
examples/legacy_apps/examples/: CMakeLists.txt
examples/legacy_apps/examples/echo/: CMakeLists.txt  README.rst  rpmsg-echo.c  rpmsg-echo.h  rpmsg-ping.c
examples/legacy_apps/examples/echo/freertos/: main.c
examples/legacy_apps/examples/echo/generic/: main.c
examples/legacy_apps/examples/linux_rpc_demo/: CMakeLists.txt  README.rst  linux_rpc_demod.c
examples/legacy_apps/examples/load_fw/: CMakeLists.txt  platform_info.c  zynqmp_apu_lcm_rproc_example.c  zynqmp_rpu_lcm_rproc_example.c
examples/legacy_apps/examples/matrix_multiply/: CMakeLists.txt  README.rst  matrix_multiply.c  matrix_multiply.h  matrix_multiplyd.c
examples/legacy_apps/examples/matrix_multiply/freertos/: main.c
examples/legacy_apps/examples/matrix_multiply/generic/: main.c
examples/legacy_apps/examples/nocopy_echo/: CMakeLists.txt  README.rst
examples/legacy_apps/examples/rpc_demo/: CMakeLists.txt  README.rst  rpc_demo.c  rpc_demod.c  rpmsg-rpc-demo.h
examples/legacy_apps/examples/rpc_demo/freertos/: main.c
examples/legacy_apps/examples/rpc_demo/generic/: main.c
examples/legacy_apps/examples/rpmsg_sample_echo/: CMakeLists.txt  README.rst
examples/legacy_apps/include/: platform_info_common.h
examples/legacy_apps/machine/: CMakeLists.txt
examples/legacy_apps/machine/microblaze_generic/: platform_info.c  platform_info.h
examples/legacy_apps/machine/xlnx/: CMakeLists.txt  README.md
examples/legacy_apps/machine/xlnx/linker_files/: lscript_r5.ld.in  lscript_versal_r5.ld.in
examples/legacy_apps/machine/xlnx/zynqmp/: platform_info.c
examples/legacy_apps/machine/xlnx/zynqmp_r5/: CMakeLists.txt  helper.c  linker_large_text.ld  linker_remote.ld  platform_info.c  platform_info.h  rsc_table.c  rsc_table.h  zynqmp_r5_a53_rproc.c
examples/legacy_apps/machine/xlnx/zynqmp_r5/freertos/: gic_init.c
examples/legacy_apps/machine/zynq7/: platform_info.c  platform_info_remoteproc_master.c  zynq_a9_rproc.c
examples/legacy_apps/machine/zynqmp/: platform_info.c  platform_info.h  zynqmp_linux_r5_proc.c
examples/legacy_apps/machine/zynqmp_r5/: CMakeLists.txt  debug_info.c  debug_info.h  helper.c  linker_large_text.ld  linker_remote.ld  lscript.ld  main.h  platform_info.c  platform_info.h  platform_info_versal.c  platform_info_versal.h  platform_info_versal_net.c  platform_info_versal_net.h  platform_info_zynqmp.c  platform_info_zynqmp.h  rsc_table.c  rsc_table.h  zynqmp_r5_a53_rproc.c
examples/legacy_apps/machine/zynqmp_r5/freertos/: gic_init.c
examples/legacy_apps/machine/zynqmp_r5/generic/: gic_init.c
examples/legacy_apps/machine/zynqmp_r5/linker_files/: linker_large_text.ld  linker_remote.ld  linker_sdt.ld  linker_sdt_versal_net.ld  lscript_r5.ld.in  lscript_versal_gen2_r52.ld.in  lscript_versal_net_r5.ld.in  lscript_versal_r5.ld.in
examples/legacy_apps/system/: CMakeLists.txt  suspend.h
examples/legacy_apps/system/freertos/: CMakeLists.txt  suspend.c
examples/legacy_apps/system/freertos/machine/: CMakeLists.txt
examples/legacy_apps/system/generic/: CMakeLists.txt  suspend.c
examples/legacy_apps/system/generic/machine/: CMakeLists.txt
examples/legacy_apps/system/linux/: CMakeLists.txt  suspend.c
examples/legacy_apps/tests/msg/: CMakeLists.txt  rpmsg-nocopy-echo.c
examples/libmetal/: CMakeLists.txt  README.md
examples/libmetal/amp_demo_linux/: CMakeLists.txt  common.h  ipi-uio.c  libmetal_amp_demo.c  libmetal_amp_demod.c
examples/libmetal/amp_demo_remote_example/: CMakeLists.txt  build_deps.cmake  common.h  libmetal_amp_demod.c  lscript_sdt.ld  lscript_sdt_versal_net.ld  sys_init.c  sys_init.h
examples/libmetal/amp_demo_remote_example/demos/: ipi_latency_demod.c  ipi_shmem_demod.c  shmem_atomic_demod.c  shmem_demod.c  shmem_latency_demod.c  shmem_throughput_demod.c
examples/libmetal/amp_demo_remote_example/system/: CMakeLists.txt
examples/libmetal/amp_demo_remote_example/system/freertos/: CMakeLists.txt  amp_demo_os.h  main.c
examples/libmetal/amp_demo_remote_example/system/generic/: amp_demo_os.h  main.c
examples/libmetal/demos/: CMakeLists.txt
examples/libmetal/demos/irq_shmem_demo/: CMakeLists.txt  README.md
examples/libmetal/demos/irq_shmem_demo/common/: irq_shmem_demo.h
examples/libmetal/demos/irq_shmem_demo/host/: CMakeLists.txt  README.md  irq_shmem_demo.c
examples/libmetal/demos/irq_shmem_demo/remote/: CMakeLists.txt  README.md  irq_shmem_demo.c
examples/libmetal/demos/shmem_latency_demo/: README.md
examples/libmetal/demos/shmem_latency_demo/host/: CMakeLists.txt  shmem_latency_demo.c
examples/libmetal/demos/shmem_latency_demo/remote/: CMakeLists.txt  shmem_latency_demod.c
examples/libmetal/demos/shmem_throughput_demo/: CMakeLists.txt  README.md
examples/libmetal/demos/shmem_throughput_demo/host/: CMakeLists.txt  shmem_throughput_demo.c
examples/libmetal/demos/shmem_throughput_demo/remote/: CMakeLists.txt  shmem_throughput_demod.c
examples/libmetal/machine/host/amd_linux_userspace/: CMakeLists.txt  README.md  common.h  config.h.in  discover_platform.sh  ipi-uio.c  platform_init.c  platform_init.h
examples/libmetal/machine/remote/: CMakeLists.txt
examples/libmetal/machine/remote/amd_rpu/: CMakeLists.txt  README.md  build_deps.cmake  common.h  config.h.in  lscript_sdt.ld  platform_init.c  platform_init.h
examples/zephyr/dual_qemu_ivshmem/host/: CMakeLists.txt  prj.conf
examples/zephyr/dual_qemu_ivshmem/host/src/: main.c
examples/zephyr/virtio_mmio_devices/virtio_mmio_i2c_device/: CMakeLists.txt  prj.conf
examples/zephyr/virtio_mmio_devices/virtio_mmio_i2c_device/boards/: stm32mp157c_dk2.overlay  virtio_mmio_dev.dtsi
examples/zephyr/virtio_mmio_devices/virtio_mmio_i2c_device/src/: main_remote.c  mmio_table.c
(+131 files in other folders)
