include(${CMAKE_CURRENT_SOURCE_DIR}/build_deps.cmake)
set (_elf_name libmetal_amp_demod)
if (DEFINED CMAKE_PROJECT_NAME)
  set (_elf_name ${CMAKE_PROJECT_NAME})
endif(DEFINED CMAKE_PROJECT_NAME)

if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/system/${PROJECT_SYSTEM})
  message("INFO: libmetal demo system targeting: ${PROJECT_SYSTEM}")
  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/system/${PROJECT_SYSTEM})
else()
  message( FATAL_ERROR "invalid system: ${PROJECT_SYSTEM}. build stopping.")
  return()
endif (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/system/${PROJECT_SYSTEM})

set (source_dirs ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/system/${PROJECT_SYSTEM})
link_directories(${source_dirs})
include_directories(${source_dirs})

# used for freertos OS linking if provided
collector_list (_deps PROJECT_LIB_DEPS)

set (_c_source_files ${CMAKE_CURRENT_SOURCE_DIR}/system/${PROJECT_SYSTEM}/main.c)
list(APPEND _c_source_files ${CMAKE_CURRENT_SOURCE_DIR}/libmetal_amp_demod.c)
list(APPEND _c_source_files ${CMAKE_CURRENT_SOURCE_DIR}/sys_init.c)
set (demos shmem_demod.c shmem_atomic_demod.c ipi_shmem_demod.c ipi_latency_demod.c shmem_latency_demod.c shmem_throughput_demod.c)
foreach(item IN LISTS demos)
	list(APPEND _c_source_files ${CMAKE_CURRENT_SOURCE_DIR}/demos/${item})
endforeach()

set (_linker_script ${CMAKE_CURRENT_SOURCE_DIR}/lscript.ld)
include(CheckSymbolExists)
check_symbol_exists(SDT "bspconfig.h" HAS_SYSTEM_DT)
check_symbol_exists(VERSAL_NET "bspconfig.h" IS_VERSAL_NET)
if (HAS_SYSTEM_DT)
  if (IS_VERSAL_NET)
    set (_linker_script ${CMAKE_CURRENT_SOURCE_DIR}/lscript_sdt_versal_net.ld)
  else()
    set (_linker_script ${CMAKE_CURRENT_SOURCE_DIR}/lscript_sdt.ld)
  endif(IS_VERSAL_NET)
endif(HAS_SYSTEM_DT)

if (DEFINED DEMO_LINK_FLAGS)
  set (_deps "${_deps} ${DEMO_LINK_FLAGS}")
endif()

get_property (_linker_options GLOBAL PROPERTY TEST_LINKER_OPTIONS)
add_executable (${_elf_name}.elf ${_c_source_files})
get_property (_ec_flgs GLOBAL PROPERTY "PROJECT_EC_FLAGS")
target_compile_options (${_elf_name}.elf PUBLIC ${_ec_flgs})
target_link_libraries(${_elf_name}.elf -Wl,-Map=${_elf_name}.map -Wl,--gc-sections -T\"${_linker_script}\" -Wl,--start-group ${_deps} -Wl,--end-group)
install (TARGETS ${_elf_name}.elf RUNTIME DESTINATION bin)
